--- a/poll.html
+++ b/poll.html
@@ -9,7 +9,7 @@
   <style>
     .error { border: 2px solid red; }
     .error-text { color: red; font-weight: bold; }
-    .poll-card { margin-bottom: 20px; padding: 10px; border: 1px solid #ccc; border-radius: 8px; background: #f9f9f9; }
+    .poll-card { margin-bottom: 20px; padding: 10px; border: 1px solid #ccc; border-radius: 8px; background: #1e293b; }
     .submitButton-customizable { padding: 10px 20px; background-color: #4CAF50; color: white; border: none; border-radius: 5px; cursor: pointer; font-size: 16px; }
     .submitButton-customizable:hover { background-color: #45a049; }
   </style>
@@ -229,3 +229,4 @@
 </script>
 </body>
 </html>
+
