--- a/poll.html
+++ b/poll.html
@@ -202,7 +202,7 @@
     };
 
     try {
-      const response = await fetch("https://https://b2c3jc8q48.execute-api.us-east-1.amazonaws.com/production/submitPoll", {
+      const response = await fetch("https://b2c3jc8q48.execute-api.us-east-1.amazonaws.com/production/submitPoll", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify(data)
@@ -229,4 +229,5 @@
 </script>
 </body>
 </html>
+
 
