--- a/poll.html
+++ b/poll.html
@@ -177,49 +177,52 @@
   }
 
   form.addEventListener("submit", async (e) => {
-    e.preventDefault(); // correct: listen to form submit
-    if(!validateForm()) return;
+  e.preventDefault(); // listen to form submit
+  if(!validateForm()) return;
 
-    const token = await grecaptcha.execute('6Ld3BnUsAAAAAOFlxURTcfbTBGgW875Q8tByK9nM', { action: 'submit_poll' });
+  const token = await grecaptcha.execute('6Ld3BnUsAAAAAOFlxURTcfbTBGgW875Q8tByK9nM', { action: 'submit_poll' });
 
-    const data = {
-      responseId: uuidv4(),
-      q1: form.q1.value === "Others" ? form.q1_others.value : form.q1.value,
-      q2: form.q2.value,
-      q3: form.q3.value,
-      q4: form.q4.value,
-      q5: form.q5.value,
-      district: form.district.value,
-      constituency: form.constituency.value,
-      timestamp: new Date().toISOString(),
-      recaptchaToken: token
-    };
+  const data = {
+    responseId: uuidv4(),
+    q1: form.q1.value === "Others" ? form.q1_others.value : form.q1.value,
+    q2: form.q2.value,
+    q3: form.q3.value,
+    q4: form.q4.value,
+    q5: form.q5.value,
+    district: form.district.value,
+    constituency: form.constituency.value,
+    timestamp: new Date().toISOString(),
+    recaptchaToken: token
+  };
 
-    try {
-      const response = await fetch("https://b2c3jc8q48.execute-api.us-east-1.amazonaws.com/production/submitPoll", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify(data)
-      });
+  try {
+    const response = await fetch("https://b2c3jc8q48.execute-api.us-east-1.amazonaws.com/production/submitPoll", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify(data)
+    });
 
-      if(response.status===200){
-        statusEl.style.color="green";
-        statusEl.innerText="✅ Your poll entry has been successfully submitted!";
-        form.reset();
-        constituencySelect.innerHTML='<option value="">Select Constituency</option>';
-      } else if(response.status===403){
-        statusEl.style.color="red";
-        statusEl.innerText="⚠ CAPTCHA verification failed. Please try again.";
-      } else{
-        statusEl.style.color="red";
-        statusEl.innerText="⚠ Error submitting poll. Please try again.";
-      }
-    } catch(err){
-      console.error(err);
-      statusEl.style.color="red";
-      statusEl.innerText="⚠ Network error. Please try again later.";
+    if(response.status === 200){
+      statusEl.style.color = "green";
+      statusEl.innerText = "✅ Your poll entry has been successfully submitted!";
+      alert("🎉 Your poll has been submitted successfully! Thank you for your participation.");
+      form.reset();
+      constituencySelect.innerHTML = '<option value="">Select Constituency</option>';
+    } else if(response.status === 403){
+      statusEl.style.color = "red";
+      statusEl.innerText = "⚠ CAPTCHA verification failed. Please try again.";
+    } else {
+      statusEl.style.color = "red";
+      statusEl.innerText = "⚠ Error submitting poll. Please try again.";
     }
-  });
+  } catch(err){
+    console.error(err);
+    statusEl.style.color = "red";
+    statusEl.innerText = "⚠ Network error. Please try again later.";
+  }
+});
+
 </script>
 </body>
 </html>
+
