--- a/poll.html
+++ b/poll.html
@@ -192,7 +192,7 @@
     q5: form.q5.value,
     district: form.district.value,
     constituency: form.constituency.value,
-    timestamp: new Date().toISOString(),
+    dateandTime: new Date().toISOString(),
     recaptchaToken: token
   };
 
@@ -227,6 +227,7 @@
 </script>
 </body>
 </html>
+
 
 
 
